--- a/comment.css
+++ b/comment.css
@@ -1,61 +1,106 @@
-body{
-    margin:0;
-   font-family:'IBM Plex Sans Hebrew';
-}
-.readmore-container{
-    margin-top: 4%;
-      height: 12px;
-    height:185vh;
-    margin-left: 20%;
-    width: 60%;
-    display:flex;
-    flex-wrap: wrap;
-    border:4px solid blue;
-    box-sizing: border-box;
-    
-}
-.read-more-picture{
-width: 100%;
+ .blog-card {
+     border: 1px solid #ccc;
+     margin: 10px;
+     padding: 10px;
+ }
 
+ .blog-card h2 {
+     font-size: 24px;
+     margin-top: 0;
+ }
 
-}
-.read-more-page{
-    font-size: 1.5rem;
-    font-weight: 400;
-}
-.lab-el{
-    color:blue;
-    font-size: 20px;
-}
-input[type="text"],
-input[type="email"]{
-    width: 50vh;
-    height: 5vh;
-    border-radius: 4px;
-}
-textarea{
-    height: 25vh;
-    width: 86%;
-    margin-left: 49px;
-    margin-top: 12PX;
-    border-radius: 4PX;
-}
-.submit-btn{
-    background-color: blue;
-    margin-left: 80%;
-    height: 6vh;
-    width: 16vh;
-    color: white;
-    font-size: 1.5rem;
-}
-.title{
-    color: blue;
-    font-size: 30px;
-    margin: 0;
-}
-.backhome{
-    color: blue;
-    margin-top: 0px;
-    font-size: 35px;
-    text-decoration: none;
-}
+ .blog-card img {
+     max-width: 100%;
+     height: auto;
+ }
+
+ .blog-card p {
+     margin-top: 10px;
+ }
+
+ .blog-preview {
+     margin: 20px 0;
+ }
+
+ .blog-preview h2 {
+     font-size: 36px;
+     margin-top: 0;
+ }
+
+ .blog-preview img {
+     max-width: 100%;
+     height: auto;
+ }
+
+ .blog-preview p {
+     margin-top: 20px;
+     font-size: 18px;
+     line-height: 1.5;
+ }
+
+  /* Comment section styling */
+  .comment-section {
+      margin-top: 30px;
+  }
+
+  .comment {
+      display: flex;
+      margin-bottom: 20px;
+  }
+
+  .comment img {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      margin-right: 15px;
+  }
+
+  .comment .comment-body {
+      display: flex;
+      flex-direction: column;
+  }
+
+  .comment .comment-author {
+      font-weight: bold;
+      margin-bottom: 5px;
+  }
+
+  .comment .comment-text {
+      margin-top: 0;
+      margin-bottom: 10px;
+  }
+
+  .comment .comment-date {
+      color: #888;
+  }
+
+  .comment-form {
+      margin-top: 30px;
+  }
+
+  .comment-form label {
+      font-weight: bold;
+  }
+
+  .comment-form input[type="text"],
+  .comment-form textarea {
+      display: block;
+      width: 100%;
+      margin-bottom: 10px;
+      padding: 5px;
+      border: 1px solid #ccc;
+      border-radius: 3px;
+  }
+
+  .comment-form input[type="submit"] {
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 3px;
+      padding: 10px 20px;
+      cursor: pointer;
+  }
+
+  .comment-form input[type="submit"]:hover {
+      background-color: #0062cc;
+  }
