--- a/style.css
+++ b/style.css
@@ -282,145 +282,81 @@ position: absolute;
 
  
       /*Admin Dashboard*/
-      .dashboard-title{
-            line-height: 41px;
-            color: #0058FF;
-            font-size: 25px;
-            text-decoration: none;
-      }
-      .head-likes{
-        position: absolute;
-            width: 423px;
-            height: 50px;
-            left: 77px;
-            top: 0px;
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 700;
-            font-size: 34px;
-            line-height: 41px;
-            text-align: center;
-            color: #0A3C9B;
-      }
-      .commentsh{
-        position: absolute;
-            width: 423px;
-            height: 50px;
-            left: 470px;
-            top: 0px;
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 700;
-            font-size: 34px;
-            line-height: 41px;
-            text-align: center;
-            color: #0040B9;
-      }
-      .messaged{
-        position: absolute;
-            width: 423px;
-            height: 50px;
-            left: 830px;
-            top: px;
-            font-family: 'Lato';
-            font-style: normal;
-            font-weight: 700;
-            font-size: 34px;
-            line-height: 41px;
-            text-align: center;
-            color: #0843B5;
-      }
-      .sidepanel{
-             position: absolute;
-            width:15%;
-            height:94%;
-            left: 0px;
-            top: 4.5%;
-            background-color: rgb(255, 255, 255);
-            box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
-      }
-      .middle-upper-panel{
-           background-color: blue;
-           box-sizing: border-box;
-            position: absolute;
-            width: 250px;
-            height: 250px;
-            left:250px;
-            top: 80px;
-            background: #FFFFFF;
-            border: 1px solid #0A3C9B;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
-            border-radius: 2px;
-      }
-           .middle-upper-panelf{
-               background-color: blue;
-               box-sizing: border-box;
-               position: absolute;
-               width: 250px;
-               height: 250px;
-               left: 600px;
-               top: 80px;
-               background: #FFFFFF;
-               border: 1px solid #0A3C9B;
-               box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
-               border-radius: 2px;
-           }
-                   .middle-upper-panell{
-                       background-color: blue;
-                       box-sizing: border-box;
-                       position: absolute;
-                       width: 250px;
-                       height: 250px;
-                       margin-left: 70%;
-                       top: 80px;
-                       background: #FFFFFF;
-                       border: 1px solid #0A3C9B;
-                       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
-                       border-radius: 2px;
-                   }
-.undermidllepanel{
-        background-color:blue;
-         box-sizing: border-box;
-        position: absolute;
-        width: 70%;
-        height: 44.5%;
-        left: 250px;
-        top: 340px;
-        background: rgba(217, 217, 217, 0.07);
-        border: 1px solid #130047;
-        font-size: large;
-}
-.content-edit{
-    display: flex;
-     background-color: white;
-     border: 4px solid blue;
-     margin-left: 17%;
-     margin-top:6%;
-     height: 84vh;
-  
-  
-}
-.blogedit{
-    box-sizing: border-box;
-        position: absolute;
-        width: 300px;
-        height: 200px;
-        left: 0px;
-        border: 1px solid #0077e6;
-}
-.blogeditdown-panel{
-    width:50%;
-        height:45%;
-        border: 1px solid #c25656;
-        margin: 20px;
-        float: left;
-        top: 5px;
-        text-align: center;
-        position: relative;
-        left:1px;
+                .sidepanel {
+                    position: absolute;
+                    display: flex;
+                    flex-direction: column;
+                    box-sizing: border-box;
+                    border:2px solid blue;
+                    margin-left: 2%;
+                    width: 15%;
+                    height: 89%;
+                    left: 0px;
+                    top: 4.5%;
+                    background-color: rgb(255, 255, 255);
+                    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+                }
+    .dashboard-container{
+        display: flex;
         box-sizing: border-box;
-         
+        margin-top: 15px;
+        border: 2px solid whitesmoke;
+        margin-left: 20%;
+        margin-right: 2%;
+        justify-content: space-evenly;
+        
+    }
+    .messages{
+        display: flex;
+        flex-direction: column;
+        box-sizing: border-box;
+        box-shadow: 2px 2px 2px;
+        border: 2px solid rgb(48, 59, 219);
+        height: 200px;
+        width: 200px;
+        margin-top: 1%;
+        margin-bottom: 1%;
+        margin-right: 1%;
+    }
+           .comment{
+               display: flex;
+               flex-direction: column;
+               box-sizing: border-box;
+               border: 2px solid blue;
+               box-shadow: 2px 2px 2px;
+               height: 200px;
+               width: 200px;
+               margin-top: 1%;
+               margin-bottom: 1%;
+                margin-right: 1%;
+            }
+            .view{
+                display: flex;
+                flex-direction: column;
+                height: 20pc;
+                display: flexbox;
+                margin-left: 20%;
+                margin-right: 2%;
+                margin-top: 1.5%;
+                box-sizing: border-box;
+                border: 2px solid blue;
+                box-shadow: 2px 2px 2px;
+            }
+ .likes{
+display: flex;
+ flex-direction: column;
+ box-sizing: border-box;
+border: 2px solid blue;
+box-shadow: 2px 2px 2px;
+height: 200px;
+width: 200px;
+margin-top: 1%;
+    margin-bottom: 1%;
+    margin-left: 1%;
 }
+               
+   /*end of Admin Dahboard*/
+   
  .blog-edit-image{
             width:100%;
             height: 50%;
