--- a/profile.css
+++ b/profile.css
@@ -11,7 +11,7 @@
     border-radius: 50%;
     width: 100px;
     height: 100px;
-    background-image: url(./graphics/proj3.jpg);
+    background-image: url(https://www.gravatar.com/avatar/6a0f14c4943e46b7d3b1d2e8e530c7a3?d=identicon);
 }
 
 h2 {
